Avalonia_Implementation: - added update values from register upon device selection and phymode change - added loading values spinner - separated link properties view for copper/fiber/mediaconverter - added CurrentView for setting the view to display based on viewmodel and phymode

--- a/Licensing/FW/ADIN1320-Firmware-Source-review.html
+++ b/Licensing/FW/ADIN1320-Firmware-Source-review.html
@@ -59,7 +59,7 @@
 </head>
 
 <body>
-  <span class="timestamp">Generated: Tue Nov  5 09:28:06 2024</span>
+  <span class="timestamp">Generated: Fri Nov  8 11:28:19 2024</span>
 
   <h1>COF Review for ADIN1320 Firmware Source 1.0</h1>
 
@@ -105,7 +105,7 @@
       <th>Tags</th>
       <td>
         
-        adi_commercial_and_permissive<br />
+        all_adi_code<br />
         
       </td>
       <td>
